[Hardware][Fix] message values & font-size, text-align

--- a/Hardware/blur/src/components/Finance.css
+++ b/Hardware/blur/src/components/Finance.css
@@ -1,7 +1,7 @@
 .Finance {
     padding-top: 46%;
-    text-align: center;
-    font-size: 140%;
+    text-align: left;
+    font-size: 85%;
     font-weight: 800;
     color: white;
 }
